test/libyul/yulSyntaxTests/zkevm/invalid/set_pubdata_price.yul
{
	$zk_set_pubdata_price()
}
// ====
// dialect: evm
// ----
// TypeError 7000: (3-24): Function "$zk_set_pubdata_price" expects 1 arguments but got 0.
